# vesting-contract

./: .envrc  .gitignore  README.md  cabal.project  flake.nix  local-cluster-info.json  log.txt  run-fourmolu.sh  run-hlint-check.sh  run-nix-formatter.sh  run-shell-check.sh  run-shell-formatter.sh  testing-scripts.md  vesting.cabal
.direnv/: flake-profile-1-link  flake-profile-10-link  flake-profile-11-link  flake-profile-12-link  flake-profile-13-link  flake-profile-2-link  flake-profile-7-link  flake-profile-8-link  flake-profile-9-link
app/: Main.hs
assets/local-testnet/: vesting.addr  vesting.plutus
assets/mainnet/: vesting.addr
assets/testnet/: vesting.addr  vesting.plutus
audit/: AuditPSM.hs  Config.hs  Endpoints.hs  Generators.hs  Utils.hs
docs/: .gitignore  make-report.sh  preamble.yaml  report.yaml
docs/audit/: hlint-report.txt  shell-check-report.txt
docs/issued-docs/: 2022-12-14-JPG-Vesting-Contract-Audit-Report.md  2022-12-16-JPG-Vesting-Contract-Audit-Report.md  checksum.txt
local-cluster/: Main.hs
nix/: default.nix
nix/pkgs/: default.nix
nix/pkgs/haskell/: default.nix  haskell.nix
scripts/: compile.sh  generate-redeemers.sh  hash-plutus.sh  local-cluster-info.json  query-protocol-parameters.sh  vesting.plutus
scripts/core/: lock-tx.sh  unlock-first-successfully-tx.sh  unlock-successfully-tx.sh
scripts/envars/: local-cluster.envars
scripts/failure-cases/: unlock-first-bad-datum-tx.sh  unlock-first-to-few-signers-tx.sh
scripts/happy-path/: lock-tx.sh  unlock-first-tx.sh  unlock-tx.sh
scripts/scratch/: benefactor-to-benificiary.sh  setup-wallets.sh
scripts/tests/: lock-unlock-first-unlock.sh
scripts/tmp/: signing-key-3f6573cc0e197da79a58813a522bc1f3af0446a9eeb4c1d242a71f16.skey  signing-key-5d7c83f316516d4f2b41fe8979cc7a598830fd1ac06634d32259aedc.skey  signing-key-65fe1f801ab846576e832794565ff250d3ebe13cf3ae25508b916691.skey  signing-key-88a97d67b9775352cc642b2b0e14692c66ca5d65672b153ca3f42641.skey  signing-key-c85c4e85688768ebd13ea1aa81236b428252bad50170beda9e657d7f.skey
scripts/tmp/mainnet/: benefactor.addr
scripts/tmp/mainnet/pkhs/: beneficiary-pkh.txt  beneficiary1-pkh.txt  beneficiary2-pkh.txt
scripts/wait/: until-next-block.sh
scripts/wallets/: make-all-wallets.sh  make-pkh.sh  make-wallet.sh
simulations/: main_test.ts  schema.ts  utils.ts
src/Canonical/: DebugUtilities.h  Shared.hs  Vesting.hs
temp/: lock-tx-body.01  lock-tx.01
temp/mainnet/: benefactor-pkh.txt  benefactor.addr  benefactor.skey  beneficiary-pkh.txt  beneficiary1-pkh.txt  beneficiary2-pkh.txt  beneficiary3-pkh.txt
tests/: Spec.hs
tests/Spec/: Mint.hs  Setup.hs  Utils.hs  Vesting.hs
tmp/: signing-key-0878a9f1bc6c5970dcf3e24c5e45075d2faafe6dca271c83ab5720ef.skey  signing-key-08d354870e8d2d5d55fbb26532b62afeb14e4917f574ddafe13ab3f6.skey  signing-key-1339e1357bbb7a7fb0af3845a90658b8c45bebdf0c82cecf370c7ca5.skey  signing-key-13764bbe6588e76b612c5e3db25aa9411bd8977036bfb845f774d581.skey  signing-key-14b4380f0729ce2a0f8d5f58c0d3aa8461fa29652791f48841a8a477.skey  signing-key-1a76ce1f16a3c76ca2b79fd327f5093d145ee17fb588f6644d8285f0.skey  signing-key-1c46eebc66c5c9bd31321ce403dfef41307445b7fd044f81fc0dddb4.skey  signing-key-20863e7bcf8a322c842529c8bc71c2a26281a5d76ba5b50b43d2eb59.skey  signing-key-226e6fb34f1fbc435934abaf1f91dbc2d4c61de9a822bbb4f702a02f.skey  signing-key-36f262bcd5afff99ae7d71d21ead4a951f1327c8105c2588149ad21f.skey  signing-key-477dddf004405740e3930d1065a429bf7e1720d44b236757011a0713.skey  signing-key-481879ee4c6b179e8f04f0d4c38ba115b60e58b50c9c490cf0ba37af.skey  signing-key-4ae4dd1a3bba3d7532dadbbfd53241394ed4d94185513f19f5240a3d.skey  signing-key-501238e38b883ab4e95072aea7f72c4f76ff410022ee98c168428015.skey  signing-key-51fb4f55ae6999bc2289cd02ea61e57dc496fd001b9fbb7ae509b8a4.skey  signing-key-5244ab70f8d75398698e6d47882d31060b904bdf75c98f222c240658.skey  signing-key-534d704f1c69ccfc23f06179a986875a73b7d5a271bdfe304a731a19.skey  signing-key-5f0b7c609a4707d5fd4392b07b3c2a7c52aceb96c081389fdd31a3ab.skey  signing-key-6978d1ef4aaaa0b8e37fe0256a0b009160420bcfb682a20cb4fb4b06.skey  signing-key-6e454796cfa9313e80775ed3daf33dae99d987c10d6235b027047eb6.skey  signing-key-724bdc8122d101ae0147887a4d5774d52e813ac32b22644720ed9f64.skey  signing-key-7ca178741ee47041b4ac798197b9e5d5ef8023fb26e4a2188b8effc4.skey  signing-key-86d9bb39db1eb5c831d04ee10a17018e22a211c5f96668c9651d483d.skey  signing-key-9eef703216ea2440006f66456f188d9cecbe41b955af7ca3b64f0b0d.skey  signing-key-a7c9660565635c508cda3500000678992f6d63420dc1fdc67bcbdb91.skey  signing-key-a7eada163f9425470dc1e6b3ada5fe5a01f01563afb377fccf577905.skey  signing-key-ada912d4c46b8ecb964365f4501baa969b6299a8f88ac5cc1e973a9c.skey  signing-key-b12e055e0e8560c859b4cc395e8bbfecff70e092c682c3de0262c836.skey  signing-key-b52e0f4280562a05281a9ff11775a855d94eaa9b6fc9a77739a1eeab.skey  signing-key-b60014702d5071241ebc45350d2d154b12739a84ddd49c1199cd3460.skey  signing-key-bb8ffddc476a242090f36d9a0ac2865e4ab8daf8092795caf5e60646.skey  signing-key-c902da3d192c096c32da8fbd3f3216d8b40eb3db7a685915cf3488eb.skey  signing-key-cc2293b9ce48950c6a24438d9a22f0f405390e6a249544607a6f9aad.skey  signing-key-d5ecddf18c82fcf1d94b947c248d69d026ac281089fe36083ec902a8.skey  signing-key-d93aa713d0ddf9402ef72bc24c088dc863b1dca5e220b0dea21547b6.skey  signing-key-da3153546507dad7a443a69acae0baacbe241de51da5dee2c4687d12.skey  signing-key-dd689f2dcf8718ebd474df23068936d7c289f8777e1ef8dc40756634.skey  signing-key-e13a79e96d83ecb01a922548f59755d91a1ca363b73926dc744813ca.skey  signing-key-e1a1261f9623b7ccb83bf4380cdefa5da6554834775f9ba5ed3dfe85.skey  signing-key-eb0899847af757c616e07da3e599b9b52764703024c2aac985d31b2c.skey  (+5 more)
