cabal-version: 2.4
name:          vesting
version:       1.0.0.0
license:       MIT
author:        Richard Wallace, Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple

common lang
  build-depends:    base
  default-language: Haskell2010
  default-extensions:
    DataKinds
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TemplateHaskell
    TypeApplications
    TypeFamilies
    BangPatterns
    CPP
    LambdaCase
    DeriveGeneric

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages
    -Werror

library
  import:          lang
  exposed-modules: Canonical.Vesting
                   Canonical.Shared
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , plutonomy
    , plutip
    , plutus-script-utils

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages -Werror

executable vesting-sc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , optparse-applicative
    , vesting
    , split
    , plutus-tx
    , optparse-generic
    , text

-- test-suite vesting-tests
--   import:         lang
--   type:           exitcode-stdio-1.0
--   main-is:        Spec.hs
--   hs-source-dirs: tests
--   other-modules:
--     Spec.Vesting
--   build-depends:
--     , base                  >=4.9 && <5
--     , plutus-simple-model
--     , plutus-ledger-api
--     , tasty
--     , vesting
