cabal-version: 2.4
name:          vesting
version:       1.0.0.0
license:       MIT
author:        Richard Wallace, Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple


flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: True
    manual: True

common lang
  build-depends:    base
  default-language: Haskell2010
  default-extensions:
    DataKinds
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TemplateHaskell
    TypeApplications
    TypeFamilies
    BangPatterns
    CPP
    LambdaCase
    DeriveGeneric
    ImportQualifiedPost
    NumericUnderscores
    DerivingStrategies
    FlexibleContexts
    StandaloneDeriving
    RankNTypes
    FlexibleInstances

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Werror 
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          lang
  exposed-modules: Canonical.Vesting
                   Canonical.Shared
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , plutonomy
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-script-utils
    , serialise

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages -Werror

executable vesting-sc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , optparse-applicative
    , vesting
    , split
    , plutus-tx
    , optparse-generic
    , text

executable cluster
  import:         lang
  hs-source-dirs: local-cluster
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base                  >=4.9 && <5
    , bot-plutus-interface
    , containers
    , data-default
    , directory
    , lens
    , mtl
    , plutip
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , tasty
    , text
    , vesting

test-suite vesting-tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  ghc-options:   -Wall -threaded -rtsopts
  hs-source-dirs: tests
  other-modules:
    Spec.Mint
    Spec.Setup
    Spec.Utils
    Spec.Vesting
  build-depends:
    , base                  >=4.9 && <5
    , bot-plutus-interface
    , containers
    , data-default
    , lens
    , mtl
    , plutip
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , tasty
    , text
    , vesting
